changed the min-height of images for alignment fix

--- a/src/less/main-content.less
+++ b/src/less/main-content.less
@@ -29,7 +29,7 @@
                 // height: 150px;
                 // padding: 10px;
                 margin: 0px;
-                min-height: 165px;
+                min-height: 215px;
 
                 @media @tablet {
                     min-height: 250px;
